--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
 	<div id="calculator">
 		<header>
-			<label for="" id="detail">1 x 3</label>
+			<label for="" id="detail"></label>
 			<div id="result">
 				<span>=</span>
-				<div id="result-value">3</div>
+				<div id="result-value"></div>
 			</div>
 		</header>
 		<div id="keys">
 			<button>C</button>
 			<button>+/-</button>
 			<button>%</button>
-			<button>:</button>
+			<button>/</button>
 			<button>7</button>
 			<button>8</button>
 			<button>9</button>
@@ -37,5 +37,7 @@
 			<button>=</button>
 		</div>
 	</div>
+
+	<script src="calculation.js"></script>
 </body>
 </html>
